# klipso_framework_data1

./: .env.example  .gitignore  CLAUDE.md  README.md  active_spec.md  app.py  bench_runner.sh  bench_seed.sh  pyproject.toml  requirements.txt  run_pipeline.py
agents/: 00_setup_llm.py  01_data_recon.py  02_eda_auto.py  03_hypothesis.py  04_business_tx.py  05_viz.py  setup_llm.py
bench_results/: accumulated.jsonl
bench_results/iris_20260613T191152Z/: answer_key.md
bench_results/iris_20260614T045809Z/: editorial_brief.md  eval.json
bench_results/spotify-2023_20260614T050736Z/: answer_key.md
bench_results/titanic_20260613T191901Z/: answer_key.md
docs/: VERSIONS_modelo_a.md  airbnb_benchmark_saranggami.md  methodology.md  model_b_proposal.md  model_c_proposal.md  model_gaps.md  modelo_a_gaps.md
klipso/: __init__.py
klipso/agents/: __init__.py  business_tx.py  data_recon.py  eda.py  hypothesis.py  viz.py
klipso/llm/: __init__.py  provider.py
klipso/utils/: __init__.py  data_cleaning.py  profiler.py
models/model_a/airbnb/: app_airbnb.py  viz_airbnb.py
models/model_b/: app_b.py  graph.py  state.py
